# multi-ai-handler

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
multi_ai_handler/: __init__.py  ai_handlers.py  ai_provider.py  extract_md.py  generate_payload.py  interface.py  multi_ai_handler.py  utils.py
multi_ai_handler/providers/: anthropic.py  cerebras.py  google.py  ollama.py  openai.py  openrouter.py
test/: versions.py
